--- a/ENG101 Open Access 2/portfolios.html
+++ b/ENG101 Open Access 2/portfolios.html
@@ -54,33 +54,23 @@
           
                 </ol>
 
-              <p>Portfolios give you and your writing more agency, and they encourage you to reflect
-                and revise your course work and ideas.
-                Portfolios demonstrate the relationship between process and product,
-                and they allow you to see the writing processes you used to complete the course.
-                Portfolios are built on the following core principles: </p>
+              <p>Portfolios give you and your writing more agency, and they encourage you to reflect on your learning
+                and revise your writing and ideas. Portfolios demonstrate the relationship between your process and the product,
+                and they allow you to examine and analyze your writing processes. Portfolios are built on the following core principles: </p>
 
                 <ul>
                   <li>Collecting </li>
+		<li>Selecting</li>
                     <li>Reflecting</li>
-                    <li>Selecting</li>
                     <li>Revising</li>
                     <li>Evaluating</li>
                     </ul>
-
-                <p>In “Reflection, Revision, and Assessment in First-Year Composition ePortfolios”
-                  Christy Desmet, Deborah Church Miller, June Griffin, Ron Balthazor, and Robert E. Cummings
-                  contend that portfolios do four specific things: They "increase the writer’s agency in assessment,”
-                    since the writer persuades their audience through a reflective introduction (p. 19). Second,
-                    portfolios encourage students to reflect on their revision process and use it to revise
-                    papers that may otherwise remain untouched (19). Third, portfolios establish “an explicit
-                    relationship between process and product” (19). Finally, portfolios help students learn about audience (p. 19).
-
-                   In “The Use of ePortfolios in Evaluating the Curriculum and Student Learning,” Dale Fitch, Melissa Peet,
+							
+                  <p> Numerous educators and writing instructors have expressed a deep affinity for portfolios and portfolio pedagogy. 
+			  In “The Use of ePortfolios in Evaluating the Curriculum and Student Learning,” Dale Fitch, Melissa Peet,
                    Beth Glover Reed, and Richard Tolman explain that portfolios prompt students to reflect on
-                   their experiences and ideas and they allow students to clarify their goals (p. 39). </p>
-
-<p>In “Establishing Portfolio Evaluation,” Anne Gere, Hannah Dickinson, Melinda McBee Orzulak, and Stephanie Moody contend
+                   their experiences and ideas and they allow students to clarify their goals (p. 39).
+			  In “Establishing Portfolio Evaluation,” Anne Gere, Hannah Dickinson, Melinda McBee Orzulak, and Stephanie Moody contend
 that portfolios give students the chance to reflect on their work and
 improve metacognitive abilities. In “Assessing, Grading, Testing, and Teaching Writing” Brian Huot
 argues that the process of compiling a portfolio
@@ -92,12 +82,24 @@ Irwin Weiser describes how portfolios allow students to make more of
  Furthermore, because portfolios are evaluated as a
 complete collection, they can help identify and emphasize the importance of growth in learning
 and help students see “each piece as part of an ongoing
-process...contributing to the student’s development, not as a discrete marker of it” (Wesier, p. 296).</p>
+process...contributing to the student’s development, not as a discrete marker of it” (Wesier, p. 296).
+			  In “Reflection, Revision, and Assessment in First-Year Composition ePortfolios”
+                  Christy Desmet, Deborah Church Miller, June Griffin, Ron Balthazor, and Robert E. Cummings
+                  contend that portfolios do four specific things: 
+		
+		<ol>
+			<li>They "increase the writer’s agency in assessment,” since the writer persuades their audience through a reflective introduction (p. 19). </li>
+			<li>Second, portfolios encourage students to reflect on their revision process and use it to revise papers that may otherwise remain untouched (19). </li>
+			<li>Third, portfolios establish “an explicit relationship between process and product” (19). </li>
+			<li>Finally, portfolios help students learn about audience (p. 19).</li>
+							</ol>
+		<p>Take a few minutes to think about these four characteristics of a portfolio and discuss them with your instructor and classmates to learn more about
+			the value of portfolios and how they are used in this course as a learning tool.</p>
 
-<h3>Resources for Making Portfolios by Rebekah Pusateri, CWU Graduate Student.</h3>
+<h3>Resources for Making Portfolios</h3>
+<p>By Rebekah Pusateri, MA CWU </p>
 <h4>Panopto</h4>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/0pM6-9-wnTE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
 
 <ul>
 <li>All professors and students have access to Panopto through canvas</li>
@@ -114,11 +116,11 @@ process...contributing to the student’s development, not as a discrete marker 
 
 
 <h4>How to Make an ePortfolio Using Google</h4>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/kykfcqqr8T8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+<iframe width="460" height="315" src="https://www.youtube.com/embed/kykfcqqr8T8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/aAT_Da1oSSE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="460" height="315" src="https://www.youtube.com/embed/aAT_Da1oSSE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/9Aq4roixJ6A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="460" height="315" src="https://www.youtube.com/embed/9Aq4roixJ6A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 <p>Google sites makes it really easy to add videos and various texts from other platforms.
@@ -133,10 +135,8 @@ Students can select a preview option for a computer, tablet, or phone to see wha
 each device and medium. </p>
 
 
-
-
 <<h4>How to Make an ePortfolio Using Wix</h4>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/fuMhHBu4AfE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="460" height="315" src="https://www.youtube.com/embed/fuMhHBu4AfE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>Wix is a free website creator?
 Students specify the template based on what they want it for: a school assignment or a job or college application.
 Students can view the template before making a decision.
@@ -146,7 +146,7 @@ The website will be made public.</p>
 
 
 <h4>How to Make an ePortfolio Using Twine </h4>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/g7VYL8xqJnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="460" height="315" src="https://www.youtube.com/embed/g7VYL8xqJnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>Students who are familiar with computer science, gaming, and programming may find this tool more interesting
 This platform will help you see nonlinear connections to various componenets of your portfolio.
 You do not need to know how to code to use Twine.
