--- a/ENG101 Open Access 2/outcomes.html
+++ b/ENG101 Open Access 2/outcomes.html
@@ -147,31 +147,11 @@ Canvas Shell. I will send you an invite. You can review examples of course mater
 assignments and readings. We are developing an open-access textbook that directly connects to our
 students at CWU and the learning outcomes. </p>
 
-<p>According to the Writing Program Council, students should be focusing on developing specific knowledge sets.
-	They contend that:</p>
 
-<blockquote> Rhetorical knowledge is the ability to analyze contexts and audiences and then to act on that
-	analysis in comprehending and creating texts.  Rhetorical knowledge is the basis of composing. Writers
-	develop rhetorical knowledge by negotiating purpose, audience, context, and conventions as they compose a
-	variety of texts for different situations. By the end of first-year composition, students should learn and
-	use key rhetorical concepts through analyzing and composing a variety of texts. Gain experience reading and
-	composing in several genres to understand how genre conventions shape and are shaped by readers’ and writers’
-	practices and purposes. Develop facility in responding to a variety of situations and contexts calling for
-	purposeful shifts in voice, tone, level of formality, design, medium, and/or structure. Understand and use a
-	variety of technologies to address a range of audiences. Match the capacities of different environments (e.g.,
-	print and electronic) to varying rhetorical situations. Faculty in all programs and departments can build on
-	this preparation by helping students learn:
-<ul>
-	<br>
-<li>The expectations of readers in their fields</li>
-<li>The main features of genres in their fields</li>
-<li>The main purposes of composing in their fields</li>
-</ul>
-</blockquote>
 
 <p>The WPA also contends that:</p>
 
-<blockquote> When writers think critically about the materials they use—whether print texts, photographs,
+<p> When writers think critically about the materials they use—whether print texts, photographs,
 	data sets, videos, or other materials—they separate assertion from evidence, evaluate sources and evidence,
 	recognize and evaluate underlying assumptions, read across texts for connections and patterns, identify and
 	evaluate chains of reasoning, and compose appropriately qualified and developed claims and generalizations.
@@ -184,7 +164,7 @@ students at CWU and the learning outcomes. </p>
 	scholarly and professionally established and maintained databases or archives, and informal electronic networks and
 	internet sources. Use strategies—such as interpretation, synthesis, response, critique, and design/redesign—to
 	compose texts that integrate the writer's ideas with those from appropriate sources. Faculty in all programs and
-	departments can build on this preparation by helping students learn:
+	departments can build on this preparation by helping students learn:</p>
 <ul>
 	<br>
 <li>The kinds of critical thinking important in their disciplines</li>
