--- a/ENG101 Open Access 2/rhetoric.html
+++ b/ENG101 Open Access 2/rhetoric.html
@@ -82,7 +82,21 @@ and how writing functions across contexts will prepare you to write for a variet
 	    rhetoric as a path toward effective composition for thousands of years. </p>
 
 <p>Rhetoric is a frame for thinking about how and why people communicate and persuade one another. In other words, rhetoric is a Swiss army knife 
-for understanding human communication. When you study rhetoric, you can begin to see how people interact 
+for understanding human communication. According to the Writing Program Council, students should be focusing on developing specific knowledge sets.
+	They contend that:</p>
+
+<p>"Rhetorical knowledge is the ability to analyze contexts and audiences and then to act on that
+	analysis in comprehending and creating texts.  Rhetorical knowledge is the basis of composing. Writers
+	develop rhetorical knowledge by negotiating purpose, audience, context, and conventions as they compose a
+	variety of texts for different situations. By the end of first-year composition, students should learn and
+	use key rhetorical concepts through analyzing and composing a variety of texts. Gain experience reading and
+	composing in several genres to understand how genre conventions shape and are shaped by readers’ and writers’
+	practices and purposes. Develop facility in responding to a variety of situations and contexts calling for
+	purposeful shifts in voice, tone, level of formality, design, medium, and/or structure. Understand and use a
+	variety of technologies to address a range of audiences. Match the capacities of different environments (e.g.,
+	print and electronic) to varying rhetorical situations."</p>
+
+<p>When you study rhetoric, you can begin to see how people interact 
 using words, sounds, images, gestures, and symbols. In this chapter, you will use rhetoric as a frame 
 to analyze a variety of texts. (A text can be a book, an article, a poem, a social media post, a song, 
 a photograph, a video game or any other form that communicates a message). Utilizing a rhetorical lens, 
@@ -356,25 +370,6 @@ was first published? How did other events going on during that time affect the t
 What other event of cultural relevance might have shaped this text?
 What was going to happen or might happen as a result of the discourse?</p>
 							
-<p>Roland Barthes notes six specific truths about texts in <i>Image, Music, Text</i> that draw
-      attention to the semiotic, rhetorical, and intertextual nature of writing and multimodal composing:</p>
-<ol>
-  <li>A text is a multidimensional space in which a multitude of writings, none of them original, blend and clash.</li>
-  <li>The text is a tissue of quotations.</li>
-  <li>An author’s only power is to mix writings.</li>
-  <li>The book is a tissue of signs.</li>
-  <li>Texts are disentangled and not deciphered.</li>
-  <li>To have an author of a text is to limit that text (Barthes, 146-47).</li>
-  </ol>
-
-
-<p>Olson writes, “Writing systems represent only parts of meaning; it is simple illusion that it is
-  a full model of what is said” (p. 121). Writing creates constructs. Constructs position certain
-  groups of people as favorable or privileged and therefore deserving over those who are not in these groups.
-  Over time, a culture that reinforces this structure normalizes the differences and asserts authority over
-  the systems that privilege. What access to discourses do you have? How does your access to those discourse
-  limit or help you? How does language and culture work to position us and how do those positions limit or help
-  us? What are discourses of cultural power and how are the gates set up to prevent accessing them? </p>
 
         <h3 id="Why is it important?">Why is rhetorical analysis important?</h3>
         <p>Consider how rhetorical analysis allows you to move beyond
