--- a/ENG101 Open Access 2/discoursecommunities.html
+++ b/ENG101 Open Access 2/discoursecommunities.html
@@ -74,7 +74,31 @@
 	to owning genres, a discourse community has acquired a specific lexis; 6) and a discourse community has a threshold level
 	of members with a suitable degree of relevant content and discoursal expertise.”</p>
 
-
+<p>The WPA notes that:</p>
+<p>"Conventions are the formal rules and informal guidelines that define genres, and in so doing,
+	shape readers’ and writers’ perceptions of correctness or appropriateness. Most obviously, conventions govern
+	such things as mechanics, usage, spelling, and citation practices. But they also influence content, style,
+	organization, graphics, and document design. Conventions arise from a history of use and facilitate reading
+	by invoking common expectations between writers and readers. These expectations are not universal; they vary
+	by genre (conventions for lab notebooks and discussion-board exchanges differ), by discipline (conventional
+	moves in literature reviews in Psychology differ from those in English), and by occasion (meeting minutes and
+	executive summaries use different registers). A writer’s grasp of conventions in one context does not mean a firm grasp in another. Successful
+	writers understand, analyze, and negotiate conventions for purpose, audience, and genre, understanding
+	that genres evolve in response to changes in material conditions and composing technologies and attending
+	carefully to emergent conventions. By the end of first-year composition, students should develop knowledge
+	of linguistic structures, including grammar, punctuation, and spelling, through practice in composing and
+	revising. Understand why genre conventions for structure, paragraphing, tone, and mechanics vary. Gain experience
+	negotiating variations in genre conventions. Learn common formats and/or design features for different kinds of
+	texts. Explore the concepts of intellectual property (such as fair use and copyright) that motivate documentation
+	conventions. Practice applying citation conventions systematically in their own work. Faculty in all programs and
+	departments can build on this preparation by helping students learn:</p>
+<ul>
+<li>The reasons behind conventions of usage, specialized vocabulary, format, and citation systems in their
+	fields or disciplines</li>
+	<li>Strategies for controlling conventions in their fields or disciplines</li>
+<li>Factors that influence the ways work is designed, documented, and disseminated in their fields</li>
+<li>Ways to make informed decisions about intellectual property issues connected to common genres and modalities in their fields.</li>
+</ul>
 
 <h3>Example Assignments and Papers</h3>
 <ul>
