--- a/ENG101 Open Access 2/reading.html
+++ b/ENG101 Open Access 2/reading.html
@@ -60,6 +60,33 @@
   </ol>
 
 <h3>What is critcal reading?</h3>
+							<p>The WPA contends that:</p>
+
+<p> "When writers think critically about the materials they use—whether print texts, photographs,
+	data sets, videos, or other materials—they separate assertion from evidence, evaluate sources and evidence,
+	recognize and evaluate underlying assumptions, read across texts for connections and patterns, identify and
+	evaluate chains of reasoning, and compose appropriately qualified and developed claims and generalizations.
+	These practices are foundational for advanced academic writing. By the end of first-year composition, students
+	should use composing and reading for inquiry, learning, critical thinking, and communicating in various rhetorical
+	contexts. Read a diverse range of texts, attending especially to relationships between assertion and evidence,
+	to patterns of organization, to the interplay between verbal and nonverbal elements, and to how these features
+	function for different audiences and situations. Locate and evaluate (for credibility, sufficiency, accuracy,
+	timeliness, bias and so on) primary and secondary research materials, including journal articles and essays, books,
+	scholarly and professionally established and maintained databases or archives, and informal electronic networks and
+	internet sources. Use strategies—such as interpretation, synthesis, response, critique, and design/redesign—to
+	compose texts that integrate the writer's ideas with those from appropriate sources. Faculty in all programs and
+	departments can build on this preparation by helping students learn:"</p>
+
+						
+  <p>Practicing analytical reading skills is a vital component of ENG 101. Students
+    will develop the capacity to recognize the rhetorical situation for every reading (intended audience, exigence, constraints, main
+  points of the argument or claim, and evidence used to support the argument) and develop strategies for reading a range of different texts across disciplines and contexts.
+	  Students will also learn to be aware of the differences and 
+	  similarities in academic discourses and genres and understand why
+  those similarities and differences exist. Students will develop the ability to annotate and summarize readings for main ideas and future use, 
+	  including alternative reading and note-taking strategies. Students will learn how to read for questions, problems, and evidences 
+	  that define a rhetorical situation.</p>
+
 <p>By Carina Xi and Dan Martin
 <p>When you practice reading and thinking rhetorically, you learn to interrogate the relationship between ideas,
 	arguments, and evidence more critically and thoroughly. What is a difficult text? What makes the text difficult?
