--- a/ENG101 Open Access 2/outcomes.html
+++ b/ENG101 Open Access 2/outcomes.html
@@ -142,110 +142,7 @@ teaching writing and best practices. We followed the Statements and Principles f
 <li>Genre Knowledge: Introduce students to the different types of genres and forms they will encounter across courses, contexts, and disciplines and explain how those genres require different writing processes and are rhetorically situated in specific ways.
 <li>Discourse Community Knowledge: Introduce students to the many different writing practices and literacies they will encounter across courses, contexts, and disciplines and discuss how those practices are rhetorically situated and require unique composing processes.
 </ul>
-<p>To learn more about the new learning outcomes and writing knowledge areas, please enroll in the ENG 101
-Canvas Shell. I will send you an invite. You can review examples of course materials with sample
-assignments and readings. We are developing an open-access textbook that directly connects to our
-students at CWU and the learning outcomes. </p>
-
-
-
-<p>The WPA also contends that:</p>
-
-<p> When writers think critically about the materials they use—whether print texts, photographs,
-	data sets, videos, or other materials—they separate assertion from evidence, evaluate sources and evidence,
-	recognize and evaluate underlying assumptions, read across texts for connections and patterns, identify and
-	evaluate chains of reasoning, and compose appropriately qualified and developed claims and generalizations.
-	These practices are foundational for advanced academic writing. By the end of first-year composition, students
-	should use composing and reading for inquiry, learning, critical thinking, and communicating in various rhetorical
-	contexts. Read a diverse range of texts, attending especially to relationships between assertion and evidence,
-	to patterns of organization, to the interplay between verbal and nonverbal elements, and to how these features
-	function for different audiences and situations. Locate and evaluate (for credibility, sufficiency, accuracy,
-	timeliness, bias and so on) primary and secondary research materials, including journal articles and essays, books,
-	scholarly and professionally established and maintained databases or archives, and informal electronic networks and
-	internet sources. Use strategies—such as interpretation, synthesis, response, critique, and design/redesign—to
-	compose texts that integrate the writer's ideas with those from appropriate sources. Faculty in all programs and
-	departments can build on this preparation by helping students learn:</p>
-<ul>
-	<br>
-<li>The kinds of critical thinking important in their disciplines</li>
-	<li>The kinds of questions, problems, and evidence that define their disciplines</li>
-<li>Strategies for reading a range of texts in their fields</li></ul></blockquote>
-
-<p>The WPA also asserts that:</p>
-
-<blockquote> “Writers use multiple strategies, or composing processes, to conceptualize, develop, and finalize projects.
-Composing processes are seldom linear: a writer may research a topic before drafting, then conduct additional
-research while revising or after consulting a colleague. Composing processes are also flexible: successful writers
-can adapt their composing processes to different contexts and occasions. By the end of first-year composition,
-students should develop a writing project through multiple drafts. Develop flexible strategies for reading, drafting,
-reviewing, collaborating, revising, rewriting, rereading, and editing. Use composing processes and tools as a means
-to discover and reconsider ideas. Experience the collaborative and social aspects of writing processes. Learn to
-give and to act on productive feedback to works in progress. Adapt composing processes for a variety of technologies
-and modalities. Reflect on the development of composing practices and how those practices influence their work.
-Faculty in all programs and departments can build on this preparation by helping students learn:
-<ul>
-	<br>
-<li>To employ the methods and technologies commonly used for research and communication within their fields</li>
-<li>To develop projects using the characteristic processes of their fields</li>
-<li>To review work-in-progress for the purpose of developing ideas before surface-level editing</li>
-<li>	To participate effectively in collaborative processes typical of their field</li>
-</ul></blockquote>
-
-<p>The WPA also notes that:</p>
-
-<blockquote> <p>Conventions are the formal rules and informal guidelines that define genres, and in so doing,
-	shape readers’ and writers’ perceptions of correctness or appropriateness. Most obviously, conventions govern
-	such things as mechanics, usage, spelling, and citation practices. But they also influence content, style,
-	organization, graphics, and document design. Conventions arise from a history of use and facilitate reading
-	by invoking common expectations between writers and readers. These expectations are not universal; they vary
-	by genre (conventions for lab notebooks and discussion-board exchanges differ), by discipline (conventional
-	moves in literature reviews in Psychology differ from those in English), and by occasion (meeting minutes and
-	executive summaries use different registers).</p>
-
-<p>A writer’s grasp of conventions in one context does not mean a firm grasp in another. Successful
-	writers understand, analyze, and negotiate conventions for purpose, audience, and genre, understanding
-	that genres evolve in response to changes in material conditions and composing technologies and attending
-	carefully to emergent conventions. By the end of first-year composition, students should develop knowledge
-	of linguistic structures, including grammar, punctuation, and spelling, through practice in composing and
-	revising. Understand why genre conventions for structure, paragraphing, tone, and mechanics vary. Gain experience
-	negotiating variations in genre conventions. Learn common formats and/or design features for different kinds of
-	texts. Explore the concepts of intellectual property (such as fair use and copyright) that motivate documentation
-	conventions. Practice applying citation conventions systematically in their own work. Faculty in all programs and
-	departments can build on this preparation by helping students learn:</p>
-<ul>
-<li>The reasons behind conventions of usage, specialized vocabulary, format, and citation systems in their
-	fields or disciplines</li>
-	<li>Strategies for controlling conventions in their fields or disciplines</li>
-<li>Factors that influence the ways work is designed, documented, and disseminated in their fields</li>
-<li>Ways to make informed decisions about intellectual property issues connected to common genres and modalities in their fields.</li>
-</ul></blockquote>
-
-<p>Below is the WPA framework for rhetorical and twenty-first-century skills for college success.
-	“Based in current research in writing and writing pedagogy, the Framework was written and reviewed by two-
-	and four-year college and high school writing faculty nationwide and is endorsed by the Council of Writing
-	Program Administrators, the National Council of Teachers of English, and the National Writing Project.”</p>
-
-<p>Habits of mind refers to ways of approaching learning that are both intellectual and practical and that will
-	support students’ success in a variety of fields and disciplines. The Framework identifies eight habits of mind
-	essential for success in college writing:</p>
-
-<li>Curiosity – the desire to know more about the world.</li>
-<li>Openness – the willingness to consider new ways of being and thinking in the world.</li>
-<li>Engagement – a sense of investment and involvement in learning.</li>
-<li>Creativity – the ability to use novel approaches for generating, investigating, and representing ideas.</li>
-<li>Persistence – the ability to sustain interest in and attention to short- and long-term projects.</li>
-<li>Responsibility – the ability to take ownership of one’s actions and understand the consequences of those actions
-for oneself and others.</li>
-<li>Flexibility – the ability to adapt to situations, expectations, or demands.</li>
-<li>Metacognition – the ability to reflect on one’s own thinking as well as on the individual and cultural
-processes used to structure knowledge.</li>
-</ul>
-
-<p>“These experiences aim to develop students’ rhetorical knowledge, critical thinking, writing processes,
-	knowledge of conventions, and the abilities to compose in multiple environments – from using traditional pen
-	and paper to electronic technologies.”</p>
-
-<p>According to the Writing Principles from the WAC website <a href="https://wac.colostate.edu/resources/">Link</a>:</p>
+							<p>According to the Writing Principles from the WAC website <a href="https://wac.colostate.edu/resources/">Link</a>:</p>
 <ul>
 <li>Writing as rhetorical: Texts are dynamic and respond to the goals of the writer(s), goals of the reader(s), and
 	the wider rhetorical context, which may include culture, language, genre conventions, and other texts. In order to
@@ -277,17 +174,31 @@ processes used to structure knowledge.</li>
 	assist students in developing an effective writing process include: class discussion of writing as a process,
 	peer review of early drafts, teacher feedback to early (ungraded) drafts, and the assignment of reflective
 	cover letters turned in with final drafts that detail the writer’s process.</li>
-</ul>
-<p>This curriculum will also incorporate metacognition.
-“The teacher who publicly demonstrates metacognition will probably produce students who metacogitate. One way
-to make strategy thinking public is for the teacher to render the covert cognitive and metacognitive processes in
-overt form by thinking aloud while modeling task completion. Some other indicators of teachers’ public metacognitive
-behavior might be: sharing their planning, describing their goals and objectives and giving reasons for their actions;
-seeking feedback and evaluation of their actions from others; admitting they do not know an answer but designing ways
- to produce one, and so on.” Papaleontiou-Louca, Eleonora. (2003). The concept and instruction of metacognition,
- Teacher Development, 7(1).</p>
+							</ul>
 
-<p>Metacognitive Abilities:</p>
+<p>The English department at CWU uses the WPA framework for rhetorical and twenty-first-century skills for college success.
+	“Based in current research in writing and writing pedagogy, the Framework was written and reviewed by two-
+	and four-year college and high school writing faculty nationwide and is endorsed by the Council of Writing
+	Program Administrators, the National Council of Teachers of English, and the National Writing Project.”</p>
+
+<p>The CWU English department supports the development of our students' habits of mind and metacognition. A habit of mind refers to ways of approaching learning that are both 
+	intellectual and practical and that will support students’ success in a variety of fields and disciplines. The Framework identifies eight habits of mind
+	essential for success in college writing:</p>
+
+<li>Curiosity – the desire to know more about the world.</li>
+<li>Openness – the willingness to consider new ways of being and thinking in the world.</li>
+<li>Engagement – a sense of investment and involvement in learning.</li>
+<li>Creativity – the ability to use novel approaches for generating, investigating, and representing ideas.</li>
+<li>Persistence – the ability to sustain interest in and attention to short- and long-term projects.</li>
+<li>Responsibility – the ability to take ownership of one’s actions and understand the consequences of those actions
+for oneself and others.</li>
+<li>Flexibility – the ability to adapt to situations, expectations, or demands.</li>
+<li>Metacognition – the ability to reflect on one’s own thinking as well as on the individual and cultural
+processes used to structure knowledge.</li>
+</ul>
+
+<p>This curriculum will also develop a student's metacognition.</p>
+
 <ul>
 <li>encourage the student to ‘think aloud’</li>
 <li>focus his/her attention on understanding the way she/he thinks and the problems she/he has to solve;</li>
@@ -299,35 +210,12 @@ seeking feedback and evaluation of their actions from others; admitting they do 
 <li>enable the student to become aware of the criteria for assessment.</li>
 
 </ul>
-<h3>Critical and Rhetorical Reading</h3>
-  <p>Practicing analytical reading skills is a vital component of ENG 101A-B. Students
-    will develop the capacity to do the following when reading critically: </p>
-  <ul>
-  <li>Recognize the rhetorical situation for every reading: intended audience, exigence, constraints, main
-  points of the argument or claim, and evidence used to support the argument. </li>
-  <li>Be aware of the differences and similarities in academic discourses and genres and understand why
-  those similarities and differences exist.</li>
-<li>Develop the ability to annotate and summarize readings for main ideas and future use.</li>
-  <li>Develop alternative reading and note-taking strategies.</li>
-  </ul>
 
-	<h3>Research Practices</h3>
-  <p>Students should also practice a range of basic research practices in the Stretch Program.
-  Specific instruction in online research methods will be particularly useful to students in stretch courses.
-  Students should learn more about web-based research, digital writing environments, academic databases,
-  the ethics of intellectual property, and the avoidance of plagiarism. We will be consulting with our
-  university librarians to design an information literacy component for the stretch course curriculum.
-  The following information literacy topics should be covered in ENG 101A-B and supported in the library: </p>
-  <ul>
-<li>Creating a research strategy and outline. </li>
-<li>Locating research for various types of projects. </li>
-  <li>Vetting and determining the appropriateness of resources. </li>
-  <li>Critically assessing the credibility and validity of sources. </li>
-<li>Vetting multimedia and digital sources.</li>
-  <li>Using sources ethically. </li>
-  </ul>
 
 	</div>
+				<h3> Works Cited</h3>
+				<p>Papaleontiou-Louca, Eleonora. (2003). The concept and instruction of metacognition,
+					Teacher Development, 7(1).</p>
 
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
