--- a/ENG101 Open Access 2/portfolios.html
+++ b/ENG101 Open Access 2/portfolios.html
@@ -44,8 +44,9 @@
 				<ol>
 					<li><a href="#What is a portfolio?">What is a portfolio?</a></li>
 					<li><a href="#Why are portfolios important?">Why are portfolios important?</a></li>
-					<li><a href="#examples of portfolios">Can I see some examples of portfolios?</a></li>
+					<li><a href="#Resources for making portfolios">How do I make a portfolio?</a></li>
 				</ol>
+				<h3 id="What is a portfolio?"</h3>
 				<p>Portfolios give you and your writing more agency, and they encourage you to reflect on your learning and revise your writing and ideas. Portfolios demonstrate the relationship between your process and the product, and they allow you to examine and analyze your writing processes. Portfolios are built on the following core principles: </p>
 				<ul>
 					<li>Collecting </li>
@@ -54,6 +55,7 @@
 					<li>Revising</li>
 					<li>Evaluating</li>
 				</ul>
+				<h3 id="Why are porfolios important?"</h3>
 				<p> Numerous educators and writing instructors have expressed a deep affinity for portfolios and portfolio pedagogy. In “The Use of ePortfolios in Evaluating the Curriculum and Student Learning,” Dale Fitch, Melissa Peet, Beth Glover Reed, and Richard Tolman explain that portfolios prompt students to reflect on their experiences and ideas and they allow students to clarify their goals (p. 39). In “Establishing Portfolio Evaluation,” Anne Gere, Hannah Dickinson, Melinda McBee Orzulak, and Stephanie Moody contend that portfolios give students the chance to reflect on their work and improve metacognitive abilities. In “Assessing, Grading, Testing, and Teaching Writing” Brian Huot argues that the process of compiling a portfolio allows students to practice assessing their own writing (p. 72). In “Portfolios in Progress: Reevaluating Assessment,” Sarah D. Spence and Billie Theriot note that portfolios enable students “to begin the process of self-determination, independence, and responsibility” (p. 34). In “Revising Our Practices: How Portfolios Help Teachers Learn,” Irwin Weiser describes how portfolios allow students to make more of their own decisions during the collection, reflection, selection, and revision processes (p. 296). Furthermore, because portfolios are evaluated as a complete collection, they can help identify and emphasize the importance of growth in learning and help students see “each piece as part of an ongoing process...contributing to the student’s development, not as a discrete marker of it” (Wesier, p. 296). In “Reflection, Revision, and Assessment in First-Year Composition ePortfolios” Christy Desmet, Deborah Church Miller, June Griffin, Ron Balthazor, and Robert E. Cummings contend that portfolios do four specific things:
 					<ol>
 						<li>They "increase the writer’s agency in assessment,” since the writer persuades their audience through a reflective introduction (p. 19). </li>
@@ -62,7 +64,7 @@
 						<li>Finally, portfolios help students learn about audience (p. 19).</li>
 					</ol>
 					<p>Take a few minutes to think about these four characteristics of a portfolio and discuss them with your instructor and classmates to learn more about the value of portfolios and how they are used in this course as a learning tool.</p>
-					<h3>Resources for Making Portfolios</h3>
+					<h3 id="Resources for making portfolios"</h3>
 					<p>By Rebekah Pusateri, MA CWU </p>
 					<h4>Panopto</h4>
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/0pM6-9-wnTE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
