--- a/ENG101 Open Access 2/outcomes.html
+++ b/ENG101 Open Access 2/outcomes.html
@@ -72,12 +72,12 @@
 						when writing and then make sure to develop their writing studies metalanguage so they can reflect and transfer
 						what they learn: </p>
 						<ul>
-						<li>Rhetorical knowledge: rhetorical situation; rhetorical reading; terms (exigence, rhetors, audience, constraints, Kairos)</li>
-						<li>writing process knowledge: incubation to product; terms (drafting, revising, editing, situational
+							<li><strong>Rhetorical knowledge</strong>: rhetorical situation; rhetorical reading; terms (exigence, rhetors, audience, constraints, Kairos)</li>
+						<li><strong>writing process knowledge</strong>: incubation to product; terms (drafting, revising, editing, situational
 						variables, extensive and reflexive;</li>
-						<li>genre knowledge: terms (structure and form, audience); </li>
-						<li>discourse community knowledge: terms;</li>
-						<li>and content knowledge: ? (I will argue that transfer is more likely to occur if the content is also the
+						<li><strong>genre knowledge</strong>: terms (structure and form, audience); </li>
+						<li><strong>discourse community knowledge</strong>: terms;</li>
+						<li><strong>and content knowledge</strong>: ? (I will argue that transfer is more likely to occur if the content is also the
 						knowledge domains (p. 3). </li>
 						</ul>
 						<p>Each of the first four domains should emphasize learning certain terms, a metalanguage about and for writing
@@ -133,18 +133,18 @@ a variety of purposes, audiences, and constraints. </p>
   writing goals and needs across contexts. Reflection assignments that examine how well students can apply
   what they learned about writing. Metacognition activities and assignments. Graded ePortfolios that examine
   students’ writing process and products holistically, across the quarter. </p>
-<p>The ENG 101 curriculum meets all of the AWI learning outcomes. Our outcomes now align with the research on
-teaching writing and best practices. We followed the Statements and Principles for developing writing programs and curriculums from the Writing Program Administration (Links to an external site.), the National Center for Teaching English (Links to an external site.), the Conference of College Composition and Communication (Links to an external site.), and the Writing Across the Curriculum (Links to an external site.) Administration. Current research on teaching writing argues that writing instruction and composition pedagogy should provide students more practice in the following areas:
+<p>The ENG 101 curriculum meets all of the AWI learning outcomes. Our outcomes align with the research on
+teaching writing and best practices. We followed the Statements and Principles for developing writing programs and curriculums from the Writing Program Administration, the National Center for Teaching English, the Conference of College Composition and Communication, and the Writing Across the Curriculum Administration. Current research on teaching writing argues that writing instruction and composition pedagogy should provide students more practice in the following areas:
 <h3>Writing Knowledge Areas for ENG 101</h3>
 <ul>
-<li>Rhetorical Knowledge: Students need more work throughout the course with rhetoric and rhetorical situations and how writing is dependent on audience, context, constraints, purpose, and rhetors.
-<li>Writing Process Knowledge: Writing studies research continually demonstrates the value of process knowledge. Students need more attention to writing processes and to practice developing a writing process metalanguage to think about and discuss writing.
-<li>Genre Knowledge: Introduce students to the different types of genres and forms they will encounter across courses, contexts, and disciplines and explain how those genres require different writing processes and are rhetorically situated in specific ways.
-<li>Discourse Community Knowledge: Introduce students to the many different writing practices and literacies they will encounter across courses, contexts, and disciplines and discuss how those practices are rhetorically situated and require unique composing processes.
+<li><strong>Rhetorical Knowledge</strong>: Students need more work throughout the course with rhetoric and rhetorical situations and how writing is dependent on audience, context, constraints, purpose, and rhetors.
+<li><strong>Writing Process Knowledge</strong>: Writing studies research continually demonstrates the value of process knowledge. Students need more attention to writing processes and to practice developing a writing process metalanguage to think about and discuss writing.
+<li><strong>Genre Knowledge</strong>: Introduce students to the different types of genres and forms they will encounter across courses, contexts, and disciplines and explain how those genres require different writing processes and are rhetorically situated in specific ways.
+<li><strong>Discourse Community Knowledge</strong>: Introduce students to the many different writing practices and literacies they will encounter across courses, contexts, and disciplines and discuss how those practices are rhetorically situated and require unique composing processes.
 </ul>
 							<p>According to the Writing Principles from the WAC website <a href="https://wac.colostate.edu/resources/">Link</a>:</p>
 <ul>
-<li>Writing as rhetorical: Texts are dynamic and respond to the goals of the writer(s), goals of the reader(s), and
+<li><strong>Writing as rhetorical</strong>: Texts are dynamic and respond to the goals of the writer(s), goals of the reader(s), and
 	the wider rhetorical context, which may include culture, language, genre conventions, and other texts. In order to
 	write effectively, students need to think rhetorically, understanding that all aspects of writing—from voice, to
 	organization, to stylistic conventions—are affected by the rhetorical situation. Practices that assist students
@@ -152,7 +152,7 @@ teaching writing and best practices. We followed the Statements and Principles f
 	of text), rhetorical analysis of a text (examining arguments in disciplinary texts to learn the rhetorical
 	patterns of argument in a given discipline), and peer review.</li>
 
-<li>Learning to Write: Effective writers are those who have learned to write across a variety of rhetorical
+<li><strong>Learning to Write</strong>: Effective writers are those who have learned to write across a variety of rhetorical
 	situations, for a variety of audiences, and for a variety of purposes. Learning-to-write assignments are
 	often higher-stakes assignments that require the writer to write with attention to the conventions of a
 	rhetorical context (i.e. within the genre and discourse conventions of a specific community) and to move
@@ -160,14 +160,14 @@ teaching writing and best practices. We followed the Statements and Principles f
 	research reports, argumentative essays, analyses, annotated bibliographies) as well as civic genres (i.e.
 	letters to the editor, proposals, reviews, blogs).</li>
 
-<li>Writing as a mode of learning: Writing has long been recognized as enhancing the learning process. Writing
+<li><strong>Writing as a mode of learning</strong>: Writing has long been recognized as enhancing the learning process. Writing
 	makes thinking visible, allowing learners to reflect on their ideas. Further, writing facilitates connections
 	between new information and learned information, and among areas of knowledge across multiple domains.
 	In practice, writing-to-learn (WTL) activities are informal, ungraded, and designed to focus on a particular
 	learning outcome. WTL activities include double-entry (or dialectic) journals, freewriting, observation journals,
 	reading responses, online class blogs, and class wikis.</li>
 
-<li>Writing as a process: For high-stakes writing (writing that will be graded), the writing process is long and
+<li><strong>Writing as a process</strong>: For high-stakes writing (writing that will be graded), the writing process is long and
 	complex, with the writer revising in response to developing ideas, reader feedback, and a deeper understanding
 	of the rhetorical situation. Scaffolding students’ writing processes often leads to student writing that displays
 	an increase in the depth of thought, awareness of audience, and attention to style and editing. Practices that
@@ -184,7 +184,7 @@ teaching writing and best practices. We followed the Statements and Principles f
 <p>The CWU English department supports the development of our students' habits of mind and metacognition. A habit of mind refers to ways of approaching learning that are both 
 	intellectual and practical and that will support students’ success in a variety of fields and disciplines. The Framework identifies eight habits of mind
 	essential for success in college writing:</p>
-
+<ul>
 <li>Curiosity – the desire to know more about the world.</li>
 <li>Openness – the willingness to consider new ways of being and thinking in the world.</li>
 <li>Engagement – a sense of investment and involvement in learning.</li>
