--- a/ENG101 Open Access 2/outcomes.html
+++ b/ENG101 Open Access 2/outcomes.html
@@ -48,46 +48,25 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>ENG 101 and The Stretch Program Learning Outcomes</h1>
+							<h1>ENG 101 Learning Outcomes</h1>
 
-							<p>This course is designed to provide you with writing knowledge that you can use to make decisions about writing across contexts.
-								Yancey, Robertson, and Taczak (2013) insist that “students need a vocabulary for writing in order to
-								articulate knowledge and ensure more successful transfer.” They explain that “Without such a language,
-								students cannot easily describe individual writing tasks or similarities and differences across them;
-								without such a language borders to these new worlds represented by new ways of writing and thinking too
-								often remain closed” (p. 101). Expectations for writing built on writing myths lead to frustrated students.
-								The CWU English Writing Program believes that knowing how to talk about writing leads to better writing.</p>
-
-						<p>Students, writing teachers at different levels, and faculty across disciplines struggle to discuss writing because they are not using
-						a shared language for writing. That is one of the biggest inhibitors for developing students’ writing abilities
-						across contexts. Students need chances to develop their writing knowledge and spaces to use their
-						own language to develop a theory of writing practice that works for them across disciplines.
-						Yancey, Robertson, and Taczak (2014) reiterate that students need a kind of “travel guide” or “passport” to help
-						them make sense of their writing situations. Everyone needs a language for discussing writing and
-						to think through their writing problems. Many people lack a language to discuss writing or to explain how
-						writing functions. Students need a travel guide or passport for discussing and making sense of writing situations across disciplines.
-						This will allow writing Instructors to be more intentional and direct with their transfer goals. </p>
-
+		
 						<p>ENG 101 is built around five domains of knowledge that Anne Beaufort contends professional writers pull from
-						when writing and then make sure to develop their writing studies metalanguage so they can reflect and transfer
-						what they learn: </p>
+						when writing: </p>
 						<ul>
 							<li><strong>Rhetorical knowledge</strong>: rhetorical situation; rhetorical reading; terms (exigence, rhetors, audience, constraints, Kairos)</li>
-						<li><strong>writing process knowledge</strong>: incubation to product; terms (drafting, revising, editing, situational
-						variables, extensive and reflexive;</li>
-						<li><strong>genre knowledge</strong>: terms (structure and form, audience); </li>
-						<li><strong>discourse community knowledge</strong>: terms;</li>
-						<li><strong>and content knowledge</strong>: ? (I will argue that transfer is more likely to occur if the content is also the
-						knowledge domains (p. 3). </li>
+						<li><strong>writing process knowledge</strong></li>
+						<li><strong>genre knowledge</strong> </li>
+						<li><strong>discourse community knowledge</strong></li>
+						<li><strong>and content knowledge</strong>(p. 3). </li>
 						</ul>
-						<p>Each of the first four domains should emphasize learning certain terms, a metalanguage about and for writing
-						that can lead to more reflection and transfer. Research supports the need for students to have a better
-						metalanguage for writing they can use to talk about writing in more comprehensive ways. Perhaps I could
-						present on a more writing studies vocab curriculum. I suggest using Beaufort’s domains for writing knowledge
-						or Wardle’s threshold concepts for writing knowledge as a frame for designing your first-year writing
-						learning outcomes. This will give instructors more opportunities to introduce terms and students will most
-						likely encounter more terms and multiple definitions and interpretations for the terms that will expand their
-						understanding of the terms and therefore how writing functions across disciplines.</p>
+						<p>This course is designed to provide you with writing knowledge that you can use to make decisions about writing across contexts.
+								Expectations for writing built on myths lead to frustrated students.
+								The CWU English Writing Program believes that knowing about writing leads to better writing.
+								Students need to develop their writing knowledge 
+								Students need a travel guide for discussing and making sense of writing situations across disciplines.
+						 Using Beaufort’s domains for writing knowledge
+						will expand your understanding of how writing functions across disciplines.</p>
 
 
 <p><b>Outcome 1</b>: Identify and analyze how a variety of print, digital, and multimodal texts are rhetorically
@@ -100,8 +79,8 @@
 <p><b>Outcome 2</b>: Read, summarize, analyze, and synthesize a variety of college-level print and
   multimedia sources to support and respond to a variety of ethical and objective writing goals across contexts. </p>
   <p>Annotations that summarize source material. Annotations with rhetorical commentaries. Reading synthesis and analysis
-    assignments. Students will work on projects that summarize, analyze, and synthesize all quarter. Video and multimodal
-    analysis of course material and readings. Graded papers, reading responses, annotations, workshops, group workshops,
+    assignments. Students will complete assignments that summarize, analyze, and synthesize source material. Students will conduct video and multimodal
+    analysis. Graded papers, reading responses, annotations, workshops, group workshops,
     and multimodal projects using rubrics. Graded assignments that examine synthesizing, summarizing, and analyzing
     source material.</p>
 <p><b>Outcome 3</b>: Collect secondary and primary source materials for a variety of writing goals and evaluate
