--- a/ENG101 Open Access 2/outcomes.html
+++ b/ENG101 Open Access 2/outcomes.html
@@ -48,27 +48,34 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>ENG 101 Learning Outcomes</h1>
+							<h1>Introduction to ENG 101</h1>
 
-		
 						<p>ENG 101 is built around five domains of knowledge that Anne Beaufort contends professional writers pull from
-						when writing: </p>
+						when writing for various rhetorical situations: </p>
 						<ul>
-							<li><strong>Rhetorical knowledge</strong>: rhetorical situation; rhetorical reading; terms (exigence, rhetors, audience, constraints, Kairos)</li>
-						<li><strong>writing process knowledge</strong></li>
-						<li><strong>genre knowledge</strong> </li>
-						<li><strong>discourse community knowledge</strong></li>
-						<li><strong>and content knowledge</strong>(p. 3). </li>
+							<li><strong>Rhetorical knowledge</strong>: rhetorical situation; rhetorical reading; (exigence, rhetors, audience, constraints, Kairos). Students need more work throughout the course with rhetoric and rhetorical situations and how 
+	writing is dependent on audience, context, constraints, purpose, and rhetors.</li>
+						<li><strong>writing process knowledge</strong>:incubation to product; terms (drafting, revising, editing, situational
+						variables, extensive and reflexive. Writing studies research continually demonstrates the value of process knowledge. 
+	Students need more attention to writing processes and to practice developing a writing process metalanguage to think about and discuss writing.</li>
+						<li><strong>genre knowledge</strong>: structure and form, audience. Introduce students to the different types of genres and forms they will encounter across courses, 
+	contexts, and disciplines and explain how those genres require different writing processes and are rhetorically situated in specific ways. </li>
+						<li><strong>discourse community knowledge</strong>: conventions, jargon, identity kits. Introduce students to the many different writing practices and literacies they will encounter 
+	across courses, contexts, and disciplines and discuss how those practices are rhetorically situated and require unique composing processes.</li>
+						<li><strong>and content knowledge</strong>: what does writing do across contexts? (p. 3). </li>
 						</ul>
-						<p>This course is designed to provide you with writing knowledge that you can use to make decisions about writing across contexts.
+							
+	<p>ENG 101 is designed to provide you with writing knowledge that you can use to make decisions about writing across contexts.
 								Expectations for writing built on myths lead to frustrated students.
-								The CWU English Writing Program believes that knowing about writing leads to better writing.
-								Students need to develop their writing knowledge 
-								Students need a travel guide for discussing and making sense of writing situations across disciplines.
-						 Using Beaufort’s domains for writing knowledge
-						will expand your understanding of how writing functions across disciplines.</p>
+								The CWU English Writing Program believes that knowing what writing is and does leads to better writing.
+								Students benefit from developing their writing knowledge 
+								into a travel guide for writing across disciplines.
+						 Learning Beaufort’s domains for writing knowledge
+						will expand your understanding of how writing functions across disciplines and contexts. 
+		The ENG 101 curriculum meets all of the AWI learning outcomes, and our outcomes align with the research on
+teaching writing and best practices. </p>
 
-
+<h1>ENG 101 Learning Outcomes</h1>
 <p><b>Outcome 1</b>: Identify and analyze how a variety of print, digital, and multimodal texts are rhetorically
   situated, locating their purposes, claims, evidences, biases, intended audiences, and constraints.</p>
 <p>Conduct rhetorical analysis assignments that explore how context, audience, purpose, and constraints shape
@@ -112,15 +119,9 @@ a variety of purposes, audiences, and constraints. </p>
   writing goals and needs across contexts. Reflection assignments that examine how well students can apply
   what they learned about writing. Metacognition activities and assignments. Graded ePortfolios that examine
   students’ writing process and products holistically, across the quarter. </p>
-<p>The ENG 101 curriculum meets all of the AWI learning outcomes. Our outcomes align with the research on
-teaching writing and best practices. We followed the Statements and Principles for developing writing programs and curriculums from the Writing Program Administration, the National Center for Teaching English, the Conference of College Composition and Communication, and the Writing Across the Curriculum Administration. Current research on teaching writing argues that writing instruction and composition pedagogy should provide students more practice in the following areas:
-<h3>Writing Knowledge Areas for ENG 101</h3>
-<ul>
-<li><strong>Rhetorical Knowledge</strong>: Students need more work throughout the course with rhetoric and rhetorical situations and how writing is dependent on audience, context, constraints, purpose, and rhetors.
-<li><strong>Writing Process Knowledge</strong>: Writing studies research continually demonstrates the value of process knowledge. Students need more attention to writing processes and to practice developing a writing process metalanguage to think about and discuss writing.
-<li><strong>Genre Knowledge</strong>: Introduce students to the different types of genres and forms they will encounter across courses, contexts, and disciplines and explain how those genres require different writing processes and are rhetorically situated in specific ways.
-<li><strong>Discourse Community Knowledge</strong>: Introduce students to the many different writing practices and literacies they will encounter across courses, contexts, and disciplines and discuss how those practices are rhetorically situated and require unique composing processes.
-</ul>
+
+<p>We also relied on the Statements and Principles for developing writing programs and curriculums from the Writing Program Administration, the National Center for Teaching English, the Conference of College Composition and Communication, and the Writing Across the Curriculum Administration. Current research on teaching writing argues that writing instruction and composition pedagogy should provide students more practice in the following areas:
+
 							<p>According to the Writing Principles from the WAC website <a href="https://wac.colostate.edu/resources/">Link</a>:</p>
 <ul>
 <li><strong>Writing as rhetorical</strong>: Texts are dynamic and respond to the goals of the writer(s), goals of the reader(s), and
@@ -164,32 +165,32 @@ teaching writing and best practices. We followed the Statements and Principles f
 	intellectual and practical and that will support students’ success in a variety of fields and disciplines. The Framework identifies eight habits of mind
 	essential for success in college writing:</p>
 <ul>
-<li>Curiosity – the desire to know more about the world.</li>
-<li>Openness – the willingness to consider new ways of being and thinking in the world.</li>
-<li>Engagement – a sense of investment and involvement in learning.</li>
-<li>Creativity – the ability to use novel approaches for generating, investigating, and representing ideas.</li>
-<li>Persistence – the ability to sustain interest in and attention to short- and long-term projects.</li>
-<li>Responsibility – the ability to take ownership of one’s actions and understand the consequences of those actions
+<li>Curiosity: the desire to know more about the world.</li>
+<li>Openness: the willingness to consider new ways of being and thinking in the world.</li>
+<li>Engagement: a sense of investment and involvement in learning.</li>
+<li>Creativity: the ability to use novel approaches for generating, investigating, and representing ideas.</li>
+<li>Persistence: the ability to sustain interest in and attention to short- and long-term projects.</li>
+<li>Responsibility: the ability to take ownership of one’s actions and understand the consequences of those actions
 for oneself and others.</li>
-<li>Flexibility – the ability to adapt to situations, expectations, or demands.</li>
-<li>Metacognition – the ability to reflect on one’s own thinking as well as on the individual and cultural
+<li>Flexibility: the ability to adapt to situations, expectations, or demands.</li>
+<li>Metacognition: the ability to reflect on one’s own thinking as well as on the individual and cultural
 processes used to structure knowledge.</li>
 </ul>
 
-<p>This curriculum will also develop a student's metacognition.</p>
+<p>This curriculum will also develop your metacognition. Eleonora Papaleontiou-Louca (2003) notes that metacognition: </p>
 
 <ul>
-<li>encourage the student to ‘think aloud’</li>
+<li>"encourage the student to ‘think aloud’</li>
 <li>focus his/her attention on understanding the way she/he thinks and the problems she/he has to solve;</li>
 <li>ask not only for the results, but also for the procedure of thought and the strategy followed;</li>
 <li>teach strategies for overcoming difficulties;</li>
 <li>place each subject among its relevant ones and find connections among them;</li>
 <li>encourage the student to generate questions before, during and after the   elaboration of a subject;</li>
 <li>help the student to perceive entities, connections, relations, similarities and differences;</li>
-<li>enable the student to become aware of the criteria for assessment.</li>
-
+<li>enable the student to become aware of the criteria for assessment." (p. </li>
 </ul>
-
+<p>You will practice metacognition throughout the quarter and your instructor will ask you to reflect on your learning throughout course. At the end of the term 
+	you will create an ePortfolio and write a reflection memo about your learning experiences in the course. </p>
 
 	</div>
 				<h3> Works Cited</h3>
