--- a/ENG101 Open Access 2/stretch.html
+++ b/ENG101 Open Access 2/stretch.html
@@ -47,7 +47,21 @@
 					<div id="main">
 						<div class="inner">
 							<h1>The Stretch Program</h1>
-
+<p> Stretch courses take an ENG 101 course and stretch it out across two quarters so that students have more time to practice writing and get feedback on their
+	writing in low-risk spaces. Stretch courses cover the same learning outcomes and course material as a one quarter ENG 101. Stretching the 
+	learning objectives of a one-quarter writing course across two quarters gives students extended and intensive practice in the types of 
+	critical reading and writing they need to be successful students across the university. The philosophy behind this model is grounded 
+	in the assumption that all students coming into the university are capable learners in possession of effective literacy skills; however, 
+	some students need more direct instruction and time to practice critical reading and writing, using conventions for academic discourses, 
+	and making the rhetorical moves required to compose in a variety of academic genres and contexts across disciplines. </p>
+							<p>Stretch courses increase the overall face time students have with a writing instructor. Students can potentially 
+								have the same instructor for 20-30 weeks. Stretch courses provide students an opportunity to 
+								keep a class of students together through both quarters to enhance their collaborative learning. 
+								Stretch courses create “cohorts” 
+								that can enhance and increase “student engagement. Because stretch programs keep students and 
+								instructors together, classes are able to build on content and skills from prior quarters and 
+								achieve nearly seamless curricular alignment.” A large portion of the stretch model’s success 
+								is dependent on providing students with more practice discussing, drafting, and revising their writing.</p>
 
 							<h3>
 								What Do Students Do in Stretch Courses? </h3>
