--- a/ENG101 Open Access 2/outcomes.html
+++ b/ENG101 Open Access 2/outcomes.html
@@ -187,15 +187,20 @@ processes used to structure knowledge.</li>
 <li>place each subject among its relevant ones and find connections among them;</li>
 <li>encourage the student to generate questions before, during and after the   elaboration of a subject;</li>
 <li>help the student to perceive entities, connections, relations, similarities and differences;</li>
-<li>enable the student to become aware of the criteria for assessment." (p. </li>
+<li>enable the student to become aware of the criteria for assessment." </li>
 </ul>
 <p>You will practice metacognition throughout the quarter and your instructor will ask you to reflect on your learning throughout course. At the end of the term 
 	you will create an ePortfolio and write a reflection memo about your learning experiences in the course. </p>
 
 	
 				<h3> Works Cited</h3>
-				<p>Papaleontiou-Louca, Eleonora. (2003). The concept and instruction of metacognition,
-					Teacher Development, 7(1).</p>
+				<ul>
+							<li>Papaleontiou-Louca, Eleonora. (2003). The concept and instruction of metacognition,
+					Teacher Development, 7(1).</li>
+				<li>Beaufort, Anne. (2007).<i>College writing and beyond: A new framework for university writing 
+								instruction</i>. Logan, UT: Utah State UP. Print.<li>
+							</ul>
+
 </div>
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
