--- a/ENG101 Open Access 2/discoursecommunities.html
+++ b/ENG101 Open Access 2/discoursecommunities.html
@@ -52,21 +52,27 @@
                 <ol>
 
                   <li><a href="#What are discourse communites?">What are discourse communities?</a></li>
-                  <li>What does writing and communication look like inside different communities? </li>
-									<li>Why is it important to learn how different communities function? </li>
-                  <li>What are communities of practice and why are they important?</li>
-                <li>What is an identity kit?</li>
-                  <li>How do I write in different contexts for different audiences?</li>
-									      <li>Examples of discourse community analysis assignments</li>
+                  <li><a href="#What does writing and communication look like inside different communities?"</a> </li>
+			<li><a href="#Why is it important to learn how different communities function?"</a> </li>
+			<li><a href="#What are communities of practice and why are they important?"</a></li>
+			<li><a href="#What is an identity kit?"</a></li>
+			<li><a href="#How do I write in different contexts for different audiences?"</a></li>
+			<li><a href="#Examples of discourse community analysis assignments"</a></li>
                   </ol>
 
                   <h3 id="What are discourse communities?">What are discourse communities?</h3>
 
-              <p> In this unit, students will develop a comprehensive understanding of the how writing functions across
+              <p> In this unit, students will develop a comprehensive understanding of how writing functions across
                 disciplines and contexts and how genres and forms are rhetorically situated within those contexts and
-                disciplines. </p>
+                disciplines. In "American Origins of the Writing-across-the-curriculum Movement" David Russell (1992) contends that 
+		      “writing is a complex and continuously developing response to a specialized, text-based, discourse community, highly embedded in the 
+		      differentiated practices of that community” (p. 153). 
+		      In <i>Genre and the invention of the writer: Reconsidering the place of invention in composition</i> Anis Bawarshi notes that 
+		       a discourse community is "the social and rhetorical environment within which cognitive habits, goals, assumptions, and values are shared by 
+		      participants who employ common discourse strategies for communicating and practicing these cognitive habits, goals, assumptions, and values” (p. 5). 
+		     </p>
 
-<p>In “The Concept of Discourse Community” Jonathan Swales proposes the following six criteria for discourse communities:
+<p>In “The Concept of a Discourse Community” Jonathan Swales proposes the following six criteria for discourse communities:
 	1) “A discourse community has a broadly agreed upon set of common public goals; 2) a discourse community
 	has mechanisms of intercommunication among its members; 3) a
 	discourse community uses it’s participatory mechanisms primarily to provide information and feedback; 4) A discourse
@@ -106,6 +112,15 @@
 <li><a href="samples/discoursecommunitysample.pdf"target="_blank">Discourse Community Analysis Example</a></li>
 <li><a href="samples/discoursecommunityworkshop.pdf"target="_blank">Discourse Community Workshop Sample</a></li>
 <li><a href="samples/sampleinterviewtranscriptdiscoursecommunity.pdf"target="_blank">Sample Interview Transcript for a Discourse Community Analysis</a></li>
+	
+	<h3>Works Cited</h3>
+	<ol>
+	<li>
+Bawarshi, Anis S. (2003). <i>Genre and the invention of the writer: Reconsidering the place of invention in composition</i>. 
+		Utah State University Press. https://digitalcommons.usu.edu/usupress_pubs/141
+
+	</li>
+	</ol>
 	</div>
 
 <!-- Scripts -->
