--- a/ENG101 Open Access 2/discoursecommunities.html
+++ b/ENG101 Open Access 2/discoursecommunities.html
@@ -105,8 +105,8 @@
 <li>Factors that influence the ways work is designed, documented, and disseminated in their fields</li>
 <li>Ways to make informed decisions about intellectual property issues connected to common genres and modalities in their fields.</li>
 </ul>
-
-<h3>Example Assignments and Papers</h3>
+<h3 id="What does writing and communication look like inside different communities?">What does writing and communication look like inside different communities?</h3>
+<h3 id="Example Assignments and Papers">Examples of Assignments and Papers</h3>
 <ul>
 <li><a href="samples/discoursecommunitysample2.pdf"target="_blank">Discourse Community Analysis Example</a></li>
 <li><a href="samples/discoursecommunitysample.pdf"target="_blank">Discourse Community Analysis Example</a></li>
